# cupbearer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cuda-requirements.txt  demo.ipynb  install.sh  language-models.ipynb  pyproject.toml  pyprojet.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  torch-requirements.txt
docs/: adding_a_script.md  adding_a_task.md  configuration.md  getting_started.md  high_level_structure.md
nbs/: measurement_tampering.ipynb
notebooks/: arc.ipynb  attribution_detector.ipynb  measurement_tampering.ipynb  quirky_language_models.ipynb  simple_demo.ipynb
scripts/: train_base.sh
seagull/seagull/: rules.py  simulator.py
seagull/seagull/lifeforms/: gliders.py
src/abstractions/: abstraction.py  abstraction_detector.py  adversarial_examples.py  anomaly_detector.py  backdoor.py  computations.py  custom_transforms.py  data.py  eval_abstraction.py  eval_detector.py  logger.py  mahalanobis.py  train_abstraction.py  train_base.py  train_mnist.py  trainer.py  utils.py
src/abstractions/conf/: abstraction.yaml  adversarial_examples.yaml  eval_abstraction.yaml  mahalanobis.yaml  mnist.yaml  shared.yaml  train_base.yaml
src/abstractions/conf/_shared/: shared.yaml
src/abstractions/conf/abstraction/: base.yaml  cnn.yaml  mlp.yaml
src/abstractions/conf/adversarial_examples/: main.yaml
src/abstractions/conf/attack/: clean.yaml  noise_backdoor.yaml
src/abstractions/conf/data/: cfar10.yaml  mnist.yaml  pixel_backdoor.yaml  pytorch.yaml  test.yaml  train.yaml
src/abstractions/conf/eval_abstraction/: main.yaml
src/abstractions/conf/eval_detector/: main.yaml
src/abstractions/conf/experiment/: cifar10.yaml  default_val.yaml  mnist_mlp.yaml  noise_backdoor.yaml  pixel_backdoor.yaml
src/abstractions/conf/mode/: grid.yaml
src/abstractions/conf/model/: cnn.yaml  mlp.yaml
src/abstractions/conf/optim/: adamw.yaml  base.yaml
src/abstractions/conf/train_abstraction/: main.yaml
src/abstractions/conf/train_classifier/: main.yaml
src/abstractions/data/: __init__.py  _shared.py  adversarial.py  backdoor.py  pytorch.py
src/abstractions/detectors/: __init__.py  anomaly_detector.py  config.py
src/abstractions/detectors/abstraction/: __init__.py  abstraction.py  abstraction_detector.py  adversarial_detector.py
src/abstractions/detectors/mahalanobis/: __init__.py  mahalanobis_detector.py
src/abstractions/models/: __init__.py  computations.py
src/abstractions/scripts/: _shared.yaml  adversarial_examples.py  eval_detector.py  mahalanobis.py  make_adversarial_examples.py  train_abstraction.py  train_classifier.py  train_detector.py  utils.py
src/abstractions/scripts/conf/: eval_detector_conf.py  (+3 more)
src/abstractions/tasks/: __init__.py  _config.py  adversarial_examples.py  backdoor_detection.py
src/abstractions/utils/: config_groups.py  custom_transforms.py  hydra.py  logger.py  optimizers.py  scripts.py  trainer.py  utils.py
src/cupbearer/: __init__.py  playground.ipynb
src/cupbearer/analysis/: __init__.py  helpers.py  pca.py  variances.py
src/cupbearer/data/: __init__.py  _shared.py  adversarial.py  backdoor.py  backdoor_data.py  backdoors.py  huggingface.py  pytorch.py  tampering.py  toy_ambiguous_features.py  transforms.py  validation_config.py
src/cupbearer/detectors/: __init__.py  activation_based.py  anomaly_detector.py  config.py  finetuning.py  supervised_probe.py
src/cupbearer/models/: __init__.py  computations.py  hooked_model.py  huggingface.py  models.py  transformers.py  transformers_hf.py
src/cupbearer/scripts/: __init__.py  _shared.py  eval_classifier.py  eval_detector.py  make_adversarial_examples.py  train_classifier.py  train_detector.py
src/cupbearer/tasks/: __init__.py  _config.py  adversarial_examples.py  backdoor_detection.py  huggingface_task.py  measurement_tampering.py  quirky_lm.py  task.py  tiny_natural_mechanisms.py  toy_features.py
src/cupbearer/utils/: __init__.py  config_groups.py  custom_transforms.py  data_format.py  get_activations.py  optimizers.py  scripts.py  train.py  trainer.py  utils.py
tests/: conftest.py  test_abstractions.py  test_autoencoders.py  test_beatrix.py  test_data.py  test_detector_ted.py  test_detectors.py  test_extractors.py  test_performance.py  test_pipeline.py  test_tampering.py  test_utils.py
(+63 files in other folders)
