[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cupbearer"
version = "0.0.1"
authors = [{ name = "Erik Jenner", email = "erik@ejenner.com" }]
description = "A library for mechanistic anomaly detection"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy~=1.24.2",
    "scikit-learn~=1.2.2",
    "Pillow~=9.4.0",
    "torch~=2.0.0",
    "torchvision~=0.15.1",
    "torchattacks~=3.5.1",
    "lightning~=2.1.0",
    "torchmetrics~=1.2.0",
    "tensorboard",
    "datasets",
    "tqdm",
    "loguru",
    "matplotlib",
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]
wandb = ["wandb"]

[project.urls]
"Homepage" = "https://github.com/ejnnr/cupbearer"
"Bug Tracker" = "https://github.com/ejnnr/cupbearer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["E", "W", "F", "I"]
ignore-init-module-imports = true
