[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cupbearer"
version = "0.0.1"
authors = [{ name = "Erik Jenner", email = "erik@ejenner.com" }]
description = "A library for mechanistic anomaly detection"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "scikit-learn",
    "Pillow>=9.4",
    "torch>=2.0",
    "torchvision>=0.15",
    "torchattacks>=3.5",
    "lightning>=2.1",
    "torchmetrics>=1.2",
    "tensorboard",
    "datasets",
    "tqdm",
    "loguru",
    "matplotlib",
]

requires-python = ">=3.10"

[project.optional-dependencies]
# transformer_lens is used in some tests
dev = ["pytest", "pre-commit", "ipykernel", "transformer_lens", "nbconvert"]
wandb = ["wandb"]
quirky_lm = [
    "elk_generalization @ git+https://github.com/ejnnr/quirky-language-models.git",
    "peft",
]
tiny_natural_mechanisms = ["blobfile", "transformer_lens"]

[project.urls]
"Homepage" = "https://github.com/ejnnr/cupbearer"
"Bug Tracker" = "https://github.com/ejnnr/cupbearer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["E", "W", "F", "I"]
ignore-init-module-imports = true
