[metadata]
name = abstractions
version = 0.0.1
author = "Erik Jenner"
author_email = "erik@ejenner.com"

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[flake8]
docstring-convention=google
ignore = E203, W503
max-line-length = 88

[pytype]
inputs =
    src/
    tests/
    setup.py
python_version = 3.10

[tool:pytest]
markers =
    expensive: mark a test as expensive (deselect with '-m "not expensive"')